--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="dune">Dune</h1>
         <ul class='navegacao'>
             <li><a href='#'>Home</a></li>
-            <li><a href='#'>Sobre</a></li>
+            <li><a href='#'>Personagens</a></li>
             <li><a href='#'>Contatos</a></li>
         </ul>
 
@@ -29,12 +29,49 @@
         </div>
     </main>
     <div class="espacamento"></div>
+    <h1 class="categorias">Categorias</h1>
+    <div class="container">
+        
+        <div class="box">
+            <ion-icon name="person-outline"></ion-icon>
+            <h1>Personagens</h1>
+            <p>Principais personagems de Duna</p>
+            <button>Clique aqui</button>
+        </div>
+        <div class="box">
+            <ion-icon name="book-outline"></ion-icon>
+            <h1>História de Duna</h1>
+            <p>Origem da épica história de Duna</p>
+            <button>Clique aqui</button>
+        </div>
+        <div class="box">
+            <ion-icon name="film-outline"></ion-icon>
+            <h1>Livros e Filmes</h1>
+            <p>Confira todos os livros e filmes</p>
+            <button>Clique aqui</button>
+        </div>
+    </div>
+    <div class="espacamento"></div>
     <section id="sinopse">
         <div class="box-sinopse">
             <h1>Sinopse</h1>
-            <p>Em um futuro distante, planetas são comandados por casas nobres que fazem parte de um império feudal intergalático. Paul Atreides é um jovem homem cuja família toma controle do planeta deserto Arrakis, também conhecido como Duna. A única fonte
-                da especiaria melange, a substância mais importante do cosmos, Arrakis se prova ser um planeta nem um pouco fácil de governar.</p>
+            <p>Em um futuro distante, planetas são comandados por casas nobres que fazem parte de um império feudal
+                intergalático. Paul Atreides é um jovem homem cuja família toma controle do planeta deserto Arrakis,
+                também conhecido como Duna. A única fonte
+                da especiaria melange, a substância mais importante do cosmos, Arrakis se prova ser um planeta nem um
+                pouco fácil de governar.</p>
         </div>
+    </section>
+    <div class="espacamentoMenor"></div>
+    <section class="citacao">
+        <div class="texto">
+
+            <p><span>"</span> Um grande homem não procura liderar. Ele é convocado, e aceita<span>"</span></p>
+
+    </section>
+    <section class="origem">
+        <div class="textoOrigem">
+          
     </section>
 </body>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
