--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="style/animations.css">
     <title>Duna</title>
 </head>
 
@@ -63,10 +64,18 @@
             <p><span>"</span> Um grande homem não procura liderar. Ele é convocado, e aceita<span>"</span></p>
 
     </section>
+    <div class="espacamentoMenor"></div>
     <section id="sobreDuna">
         <div class="sobreDuna">
-            <h1>Por Que um site sobre Duna?</h1>
+            <h1>Por Que assistir Duna?</h1>
             <p>Porque alem de uma história que se passa em um futuro distante, com tecnologia alienígena, seres e planetas bizarros, Duna é, para todos os efeitos, uma narrativa de construção de mito ou lenda tendo como pano de fundo um contexto fortemente ambientalista e religioso, desde as óbvias influências médio-orientais, passando pela ascensão e queda de impérios em uma Jornada do Herói que foge ao que se espera da estrutura grega clássica e que também funciona como um profundo e doloroso aviso sobre o preço do fanatismo cego que se segue ao estabelecimento da figura messiânica. </p>
+        </div>
+        <div class="trailer">
+
+            <div class="itensTrailer">
+                <a href="https://www.youtube.com/watch?v=dnBpZuSUISQ"><ion-icon name="caret-forward-circle-outline"></ion-icon></a>
+                <h1>Watch Trailer</h1>
+            </div>
         </div>
     </section>
     
