--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-    
+    <header>
+        <nav>
+            
+            <ion-icon name="menu-outline"></ion-icon>
+
+            <button>Assista já</button>
+        </nav>
+    </header>
     <main class="inicio">
         <div class="container-inicio">
             <h1 class="dune">DUNE</h1>
@@ -32,7 +39,7 @@
             <ion-icon name="person-outline"></ion-icon>
             <h1>Personagens</h1>
             <p>Principais personagems de Duna</p>
-            <button>Clique aqui</button>
+            <a href="paginas/personagens/personagens.html"><button>Clique aqui</button></a>
         </div>
         <div class="box">
             <ion-icon name="book-outline"></ion-icon>
@@ -73,7 +80,7 @@
         <div class="trailer">
 
             <div class="itensTrailer">
-                <a href="https://www.youtube.com/watch?v=dnBpZuSUISQ"><ion-icon name="caret-forward-circle-outline"></ion-icon></a>
+                <a href="https://www.youtube.com/watch?v=dnBpZuSUISQ" ><ion-icon name="caret-forward-circle-outline"></ion-icon></a>
                 <h1>Watch Trailer</h1>
             </div>
         </div>
