--- a/paginas/personagens/personagens.html
+++ b/paginas/personagens/personagens.html
@@ -16,6 +16,18 @@
             <button>Assista já</button>
         </nav>
     </header>
+    <main  class="container">
+    <div class="titulo">
+        <h1>Personagens</h1>
+    </div>
+    <div class="personagens">
+        <div class="box">
+            <img src="" alt="">
+            <h1>Paul Atreides</h1>
+        </div>
+
+    </div>
+</main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
