Adição das casas Atreides e Harkonnen

--- a/index.html
+++ b/index.html
@@ -121,17 +121,35 @@
                 </div>
             </div>
         </section>
-       
+        <div class="linha l4" style="--i:linear-gradient(180deg, rgba(31,102,79,255), transparent )"></div>
+
+        <section id="atreides">
+            <div class=" alinhamento content-atreides">
+                <div>
+                    <h2>Atreides</h2>
+                    <p>Os protagonistas de “Duna”, a Casa Atreides é uma das mais influentes do Landsraad, causando preocupação constante ao Imperador Padishah Shaddam IV, que considera isso uma ameaça a seu reinado. Os ancestrais dos Atreides remontam à Grécia Antiga, e sua rivalidade com a Casa Harkonnen iniciou-se séculos antes dos eventos de “Duna”.</p>
+                    <p>No início da história, os Atreides governam o planeta oceânico Caladan, mas deverão se mudar para o planeta desértico Arrakis por ordens do Imperador. O personagem principal é Paul Atreides (Timothée Chalamet), filho do duque Leto Atreides (Oscar Isaac) e de sua concubina, a Bene Gesserit Lady Jessica (Rebecca Ferguson). Seus servos mais destacados são os mestres de armas Gurney Halleck (Josh Brolin) e Duncan Idaho (Jason Momoa), o mentat Thufir Hawat (Stephen McKinley Henderson) e o médico Suk Wellington Yueh (Chang Chen).</p>
+                    <img src="img/brasao-atreides.webp" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="harkonnen">
+            <div class=" alinhamento content-harkonnen">
+                <div>
+                    <h2>Harkonnen</h2>
+                    <p>Os Harkonnen são inimigos mortais da família Atreides. Liderados pelo barão Vladimir Harkonnen (Stellan Skarsgard), a linhagem da família remonta ao norte europeu, possivelmente da Finlândia. A Casa Harkonnen é uma das mais poderosas do Landsraad e conta com o favor do Imperador Padishah Shaddam IV, e era ela que administrava Arrakis antes de o planeta ser transferido para a Casa Atreides. A riqueza e o poder dos Harkonnen, no entanto, vieram não só da exploração dos planetas que governa, mas de práticas de comércio desleais e imorais, principalmente escravidão.</p>
+                    
+                    <img src="img/brasao-harkonem.png" alt="">
+                </div>
+            </div>
+        </section>
         <!-- Citação -->
         <!-- <section class="citacao">
             <div class="texto">
                 <p>" Um grande homem não procura liderar. Ele é convocado, e aceita"</p>
         </section> -->
-        <div class="quote alinhamento">
-
-            <div class="linha atreides" style="--i:linear-gradient(180deg, transparent, rgba(31,102,79,255) 100%)" ></div>
-            <span style="--i:rgba(31,102,79,255)">1</span>
-            </div>
+ 
 
         <section id="sobreDuna">
             <div class="sobreDuna">
