Começando a parte destinada a Arrakis

--- a/index.html
+++ b/index.html
@@ -149,22 +149,29 @@
             <div class="texto">
                 <p>" Um grande homem não procura liderar. Ele é convocado, e aceita"</p>
         </section> -->
- 
+        <div class="quote alinhamento">
 
-        <section id="sobreDuna">
-            <div class="sobreDuna">
-                <h1>Por Que assistir Duna?</h1>
-                <p>Porque alem de uma história que se passa em um futuro distante, com tecnologia alienígena, seres e planetas bizarros, Duna é, para todos os efeitos, uma narrativa de construção de mito ou lenda tendo como pano de fundo um contexto fortemente ambientalista e religioso, desde as óbvias influências médio-orientais, passando pela ascensão e queda de impérios em uma Jornada do Herói que foge ao que se espera da estrutura grega clássica e que também funciona como um profundo e doloroso aviso sobre o preço do fanatismo cego que se segue ao estabelecimento da figura messiânica. </p>
-            </div>
-            <div class="trailer">
+            <div class="linha atreides" style="--i:linear-gradient(180deg, transparent, rgba(31,102,79,255) 100%)" ></div>
+        </div>
 
-                <div class="itensTrailer">
-                    <a href="https://www.youtube.com/watch?v=dnBpZuSUISQ" ><ion-icon name="caret-forward-circle-outline"></ion-icon></a>
-                    <h1>Watch Trailer</h1>
-                </div>
-            </div>
-        </section>
+        <section id="arrakis-sec-img"></section>
+
+        
+        <div class="quote alinhamento">
+
+            <div class="linha atreides" style="--i:linear-gradient(180deg, transparent, #ad8672)" ></div>
+            <span style="--i:linear-gradient(180deg, #ad8672, #bca8a3)">3</span>
+        </div>
     </main>
-    <script src="https://kit.fontawesome.com/8fdfdca5ee.js" crossorigin="anonymous"></script>
+
+    <section>
+        <h2>Arrakis</h2>
+        <p>Arrakis é a peça-chave da geopolítica de “Duna”. Única fonte da droga Melange em todo o universo, quem controla esse planeta desértico controla o destino de todos. Esse lugar, no entanto, cobra um preço altíssimo daqueles que se propõem a explorá-lo. O ambiente hostil é algo que precisa ser constantemente levado em consideração, principalmente suas altas temperaturas e a escassa umidade do ar, a ponto de água ser tida como uma moeda extremamente valiosa.</p>
+        <p>A extração de Melange também não é tarefa fácil. A substância é produzida como resíduo das criaturas conhecidas como Shai Hulud (vermes de areia gigantes), que a depositam fundo nos desertos do planeta. Para conseguir extraí-la são necessários diversos ornitópteros (veículos aéreos específicos), e ainda assim é uma tarefa perigosa.</p>
+        <p>Como se não bastasse, Arrakis também abriga uma população local, os Fremen, que precisam estar do lado de quem governa o planeta; do contrário, eles tornarão a vida do governante algo ainda mais difícil. Um povo orgulhoso, os Fremen têm conhecimentos importantes sobre conservação de água e umidade, a fauna local, navegação pelo deserto, entre outros. Eles são extremamente orgulhosos e respeitam quem os respeita. Arrakis era controlado pela Casa Harkonnen, que oprimia e perseguia os Fremen, além de explorar os depósitos de Melange à exaustão.
+
+        </p>
+    </section>
+</section>
 </body>
 </html>
