--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </section> -->
         <div class="quote alinhamento">
 
-            <div class="linha atreides" style="--i:linear-gradient(180deg, transparent, rgba(31,102,79,255) 100%)" ></div>
+            <div class="linha atreides" style="--i:linear-gradient(0deg, transparent, rgba(31,102,79,255) 100%)" ></div>
         </div>
 
         <section id="arrakis-sec-img"></section>
@@ -173,13 +173,14 @@
             </div>
 
         </section>
-        <div class="quote alinhamento">
+        <div class="quote alinhamento melange-quote">
             <div class="linha" style="--i:linear-gradient(180deg, transparent, #ad8672)"></div>
-            <p>“Neste momento, a substância mais preciosa no universo é a droga Melange.”
+            <p style="--i:#ad8672">“Neste momento, a substância mais preciosa no universo é a droga Melange.”
             </p>
-            <div class="linha" style="--i:linear-gradient(180deg, transparent, #ad8672)"></div>
+            <div class="linha" style="--i:linear-gradient(0deg, transparent, #ad8672)"></div>
 
         </div>
+        
         <section id="melange">
             <div class="melange-container alinhamento">
                 <h2>Melange</h2>
