--- a/index.html
+++ b/index.html
@@ -192,7 +192,29 @@
                     
                 </div>
             </div>
+        </section>
 
+        <div class="quote alinhamento">
+            <div class="linha atreides" style="--i:linear-gradient(0deg, transparent, #ad8672)" ></div>
+        </div>
+
+        <section id="fremen-sec-img"></section>
+
+
+        <div class="quote alinhamento">
+            <div class="linha atreides" style="--i:linear-gradient(180deg, transparent, #ad8672)" ></div>
+        </div>
+
+        <section id="fremen">
+            <div class=" alinhamento content-fremen">
+                <div>
+                    <h2>Harkonnen</h2>
+                    <div class="text">
+                        <p>Os Fremen são o povo originário do planeta Arrakis. Descendentes dos Zensunni (cuja religião era uma mistura de Zen Budismo e Islamismo Sunita), a cultura dos Fremen evoluiu ao longo de milhares de anos até o ponto onde “Duna” começa, com o povo tendo como foco a preservação da água (ao ponto de seu sangue coagular quase instantaneamente) e o consumo de melange – de onde vêm seus olhos profundamente azuis, sem qualquer resquício de branco. Eles também têm um laço muito forte com a cultura das Bene Gesserit. Por conta da atmosfera hostil de Arrakis, os Fremen vivem em cidades subterrâneas conhecidas como Sietch, onde conseguem manter um certo grau de umidade. Fora de suas Sietchs, eles utilizam os chamados trajestiladores, trajes feitos para preservar a umidade do próprio corpo e todos os seus resíduos, desde urina e fezes até o vapor de água presente na própria respiração.</p>
+                        <p>Os Fremen também não utilizam escudos Holtzman, pois suas vibrações fazem com que os Shai Hulud enlouqueçam e matem todos ao redor. Por conta da ausência de escudos, seus guerreiros conseguem empregar movimentos muito mais rápidos em combate.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
