--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <title>Duna</title>
 </head>
 
-<body>
+<body onscroll="scroll()">
 
     <!-- ====================BARRA DE NAVEGAÇÃO================ -->
-    <navbar id="navbar"class= "scroll">
+    <nav id="navbar"class= "">
         <div class="navbar-content alinhamento">
             <a class="logo" href="#comeco">
                <p>DUNE</p>
@@ -43,7 +43,7 @@
             </div>
             <button>Assista já</button>
         </div>
-    </navbar>
+    </nav>
 
     <!-- ====================BANNER================ -->
     <header id="comeco"> 
@@ -363,6 +363,7 @@
     </main>
 
     
-
+    <script src="script/main.js"></script>
 </body>
+    
 </html>
